<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/wins"/>

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/loss"/>

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/total"/>

            <TextView
                android:layout_column="1"
                android:layout_row="0"
                android:id="@+id/total_win"
                android:text="0"
                />

            <TextView android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/total_loss"
                android:text="0"
                />

            <TextView android:layout_column="1"
                android:layout_row="2"
                android:id="@+id/total"
                android:text="0"
                />
            <!-- finish grid layout -->

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_door"
            android:id="@+id/prompt"
            android:textSize="26sp"
            />

        <include layout="@layout/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>